# SolidityGuard

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml
.claude-plugin/: marketplace.json
.claude/commands/: audit.md  deep-audit.md  generate-fuzz.md  report.md  scan-access-control.md  scan-reentrancy.md  verify-exploit.md
.claude/skills/solidity-guard/: plugin.json
.claude/skills/solidity-guard/.claude-plugin/: plugin.json
.claude/skills/solidity-guard/commands/: audit.md  deep-audit.md  generate-fuzz.md  report.md  scan-access-control.md  scan-reentrancy.md  verify-exploit.md
.claude/skills/solidity-guard/scripts/: ctf_benchmark.py  evmbench_bootstrap.sh  evmbench_local_benchmark.py  evmbench_runner.py  exploit_verifier.py  finding_merger.py  fuzz_generator.py  report_generator.py  solidity_guard.py  test_integration.py  test_scanners.py  verify_findings.py
.claude/skills/solidity-guard/scripts/evmbench_agent/: config.yaml  start.sh
.claude/skills/solidity-guard/scripts/evmbench_instructions/: detect.md  exploit.md  exploit_templates.md  patch.md
.claude/skills/solidity-guard/skills/access-control-reviewer/: SKILL.md
.claude/skills/solidity-guard/skills/defi-analyzer/: SKILL.md
.claude/skills/solidity-guard/skills/entry-point-analyzer/: SKILL.md
.claude/skills/solidity-guard/skills/fuzz-generator/: SKILL.md
.claude/skills/solidity-guard/skills/reentrancy-auditor/: SKILL.md
.claude/skills/solidity-guard/skills/report-generator/: SKILL.md
.claude/skills/solidity-guard/skills/spec-compliance/: SKILL.md
.claude/skills/solidity-guard/skills/storage-analyzer/: SKILL.md
.claude/skills/solidity-guard/skills/vulnerability-scanner/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  desktop-release.yml  release.yml
apps/: DESIGN.md
apps/cli/: README.md  pyproject.toml
apps/cli/solidityguard/: __init__.py  __main__.py  cli.py  config.py  scanner.py  ui.py
apps/cli/tests/: test_cli.py
apps/desktop/: README.md  package-lock.json  package.json
apps/desktop/pyinstaller/: solidityguard-report-gen.spec  solidityguard-scanner.spec
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/openclaw-skill/: README.md  SKILL.md
apps/openclaw-skill/references/: exploits.md  patterns.md
apps/openclaw-skill/scripts/: install.sh  report.sh  report_generator.py  scan.sh  solidity_guard.py
apps/web/backend/: README.md  pyproject.toml
apps/web/backend/solidityguard_api/: __init__.py  main.py  websocket.py
apps/web/backend/solidityguard_api/models/: schemas.py
apps/web/backend/solidityguard_api/routes/: audit.py  auth.py  fuzz.py  patterns.py  tools.py
apps/web/backend/solidityguard_api/services/: audit_manager.py  scanner.py
apps/web/backend/tests/: test_api.py
apps/web/frontend/: index.html  package-lock.json  package.json
apps/web/frontend/src/: App.tsx  index.css  main.tsx
apps/web/frontend/src/components/: AuditConfig.tsx  CodeSnippet.tsx  FileUpload.tsx  FilterBar.tsx  FindingCard.tsx  Header.tsx  Layout.tsx  PatternCard.tsx  (+5 more)
docker/: Dockerfile.web
knowledge-base/: ctf-test-matrix.md
knowledge-base/checklists/: bridge-checklist.md  defi-checklist.md  general-checklist.md  governance-checklist.md  proxy-checklist.md  token-checklist.md
knowledge-base/exploits/: notable-exploits.md
plugins/: solidity-guard
(+22 files in other folders)
