[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solidityguard"
version = "1.3.1"
description = "Advanced Solidity smart contract auditor — 104 vulnerability patterns, 9 security tools (Slither, Mythril, Aderyn, Echidna, Foundry, Medusa, Halmos, Certora, EVMBench), CTF-validated 100% detection (DeFiVulnLabs 56/56 + Paradigm CTF 24/24 static)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
solidityguard = "solidityguard.cli:cli"

[tool.setuptools.packages.find]
include = ["solidityguard*"]
