[package]
name = "solidityguard-desktop"
version = "1.3.2"
description = "SolidityGuard Desktop — 104 vulnerability patterns, 9 security tools (Slither, Mythril, Aderyn, Echidna, Foundry, Medusa, Halmos, Certora, EVMBench), CTF-validated 100% detection"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
