[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solidityguard-api"
version = "1.1.1"
description = "SolidityGuard FastAPI backend for smart contract security auditing"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "websockets>=11.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]
