[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solidityguard-api"
version = "1.3.1"
description = "SolidityGuard FastAPI backend — 104 vulnerability patterns, 9 security tools (Slither, Mythril, Aderyn, Echidna, Foundry, Medusa, Halmos, Certora, EVMBench), CTF-validated 100% detection (DeFiVulnLabs 56/56 + Paradigm CTF 24/24 static)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "websockets>=11.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]
